--- a/Android/app/src/main/res/layout/activity_chart_common.xml
+++ b/Android/app/src/main/res/layout/activity_chart_common.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/title"
+        android:id="@+id/tvProductTitle"
         style="@style/TextAppearance.AppCompat.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -22,5 +22,15 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/main_nav_bar" />
+        app:layout_constraintTop_toBottomOf="@id/main_nav_bar"
+        app:layout_constraintBottom_toTopOf="@id/productChart"/>
+
+    <com.anychart.AnyChartView
+        android:id="@+id/productChart"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvProductTitle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
